# nkllon-stories

./: .gitignore  LICENSE  Makefile  Makefile.bak  README.md  pyproject.toml  safe_ingest.py  snowflake_ddl.sql  snowpark_audit_example.py
.kiro/specs/spore-execution/: design.md  requirements.md  tasks.md
content/stories/: lightning-rod-pm.md
docs/incidents/: 2025-11-09-assistant-connector-defect.md
spores/: policy-ontology.ttl  story-manifest.ttl
stories/: 2025-11-09-integration-mirage.md  2025-11-09-observatory-compliance.md  2025-11-09-snowflake-intelligence-test.md
tools/: gmail_mcp.py
